test_suite/alan-2022-examples/failing/001180_mutation.alan
source AC begin boolean relax end
